fixed spotify overflow

--- a/static/css/workout.css
+++ b/static/css/workout.css
@@ -22,4 +22,5 @@ margin-left: 2px !important;
 
 .sound-button{opacity: 100% !important;}
 
+#spotifylink{max-width: 360px}
 
